--- a/views/list.ejs
+++ b/views/list.ejs
@@ -44,9 +44,9 @@
 </head>
 
 <body>
-    <h1>Smart Task Scheduler</h1>
+    
     <div class="box">
-        <h1>Todo List</h1>
+        <h1>Smart task Management</h1>
     </div>
     <div class="box">
 
