--- a/views/list.ejs
+++ b/views/list.ejs
@@ -46,7 +46,7 @@
 <body>
     
     <div class="box">
-        <h1>Smart task Management</h1>
+        <h1>Smart task Scheduler</h1>
     </div>
     <div class="box">
 
